# 2020.2_G4_Funcional_SortBenchmark

./: .gitignore  BubbleSort.hs  Dockerfile  GenerateList.hs  InsertionSort.hs  Main.hs  MergeSort.hs  README.md  insertionSort.hs  sort-benchmark.cabal
app/: BubbleSort.hs  CalculateTime.hs  GenerateList.hs  Main.hs  MergeSort.hs  QuickSort.hs  SelectionSort.hs  ShellSort.hs
