cabal-version:      2.4
name:               sort-benchmark
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Esio Gustavo, Lucas Dutra, Marcos Nery, Pedro Féo, Youssef Muhamad
maintainer:         ldutra98@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable sort-benchmark
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: 
        GenerateList,
        CalculateTime,
        BubbleSort,
        InsertionSort,
        SelectionSort,
        MergeSort,
        QuickSort,
        ShellSort

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.1.0,
        random ^>=1.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
